test/syc/bad/cexprnclvar.c
/*
 * Expression is not constant.
 */

void foo(void)
{
	int z;

	enum e {
		e1 = z
	} x;
}
